Partial_14Dec2021/force-app/main/default/objects/Promotion_Members__c/Promotion_Members__c.object-meta.xml
<CustomObject>
    <label>Promotion-Member(O)</label>
    <nameField>
        <displayFormat>PM-{0}</displayFormat>
        <label>PM No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion-Members(O)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>