Partial_14Dec2021/force-app/main/default/objects/Promotion_Members__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Individual Contacts, Dealer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Promotion-Members(O)</relationshipLabel>
    <relationshipName>Promotion_Members</relationshipName>
    <type>Lookup</type>
</CustomField>