Partial_14Dec2021/force-app/main/default/objects/Promotion_Members__c/fields/Call_Completed__c.field-meta.xml
<CustomField>
    <fullName>Call_Completed__c</fullName>
    <formula>IF(ISPICKVAL(Promotion_Status__c,&apos;Completed&apos;),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Completed</label>
    <type>Checkbox</type>
</CustomField>