Partial_14Dec2021/force-app/main/default/objects/Promotion_Members__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <formula>Contacts__r.City__c</formula>
    <label>City</label>
    <type>Text</type>
</CustomField>