Partial_14Dec2021/force-app/main/default/objects/Promotion_Members__c/fields/Complaints__c.field-meta.xml
<CustomField>
    <fullName>Complaints__c</fullName>
    <label>Complaints</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Raised_Complaint__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Wrong/Invalid Number</fullName>
                <color>#2F5D85</color>
                <label>Wrong/Invalid Number</label>
            </value>
            <value>
                <fullName>Not Attended</fullName>
                <color>#FFCC66</color>
                <label>Not Attended</label>
            </value>
            <value>
                <fullName>BDM Response Poor</fullName>
                <color>#330033</color>
                <label>BDM Response Poor</label>
            </value>
            <value>
                <fullName>Supply not in Time</fullName>
                <color>#419249</color>
                <label>Supply not in Time</label>
            </value>
            <value>
                <fullName>Service Poor</fullName>
                <color>#F96FB7</color>
                <label>Service Poor</label>
            </value>
            <value>
                <fullName>Technical Issues</fullName>
                <color>#F3D904</color>
                <label>Technical Issues</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>