Partial_14Dec2021/force-app/main/default/objects/Promotion_Members__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>Contacts__r.Name</formula>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>