Partial_14Dec2021/force-app/main/default/objects/Promotion_Members__c/fields/Contacts__c.field-meta.xml
<CustomField>
    <fullName>Contacts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacts</label>
    <referenceTo>Contacts__c</referenceTo>
    <relationshipName>Promotions_Attended</relationshipName>
    <type>Lookup</type>
</CustomField>