Partial_14Dec2021/force-app/main/default/objects/Promotion_Members__c/fields/Dealer_Dist_Name__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Dist_Name__c</fullName>
    <formula>Distributor_Dealer__r.Name</formula>
    <label>Dealer/Dist Name</label>
    <type>Text</type>
</CustomField>