Partial_14Dec2021/force-app/main/default/objects/Promotion_Members__c/fields/Dealermeet__c.field-meta.xml
<CustomField>
    <fullName>Dealermeet__c</fullName>
    <formula>IF((ISPICKVAL(Promotions__r.Type__c,&apos;Dealers Meet&apos;)||ISPICKVAL(Promotions__r.Type__c,&apos;Dealers Salesman Meet&apos;)||ISPICKVAL(Promotions__r.Type__c,&apos;Dealers Factory Visit&apos;)) ,&apos;Dealers Meet&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealermeet</label>
    <type>Text</type>
</CustomField>