Partial_14Dec2021/force-app/main/default/objects/Promotion_Members__c/fields/Did_you_get_any_gifts__c.field-meta.xml
<CustomField>
    <fullName>Did_you_get_any_gifts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Did you receive any gifts?</label>
    <type>Checkbox</type>
</CustomField>