Partial_14Dec2021/force-app/main/default/objects/Promotion_Members__c/fields/Distributor_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor/Dealer</label>
    <referenceTo>Distributor_Dealer__c</referenceTo>
    <relationshipName>Promotion_Members</relationshipName>
    <type>Lookup</type>
</CustomField>