Partial_14Dec2021/force-app/main/default/objects/Promotion_Members__c/fields/Duplicate_Entry__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate Entry</label>
    <type>Checkbox</type>
</CustomField>