Partial_14Dec2021/force-app/main/default/objects/Promotion_Members__c/fields/Event_Member__c.field-meta.xml
<CustomField>
    <fullName>Event_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Member</label>
    <referenceTo>Event_Member__c</referenceTo>
    <relationshipName>Promotion_Members</relationshipName>
    <type>Lookup</type>
</CustomField>