Partial_14Dec2021/force-app/main/default/objects/Promotion_Members__c/fields/Not_Attended__c.field-meta.xml
<CustomField>
    <fullName>Not_Attended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Attended</label>
    <type>Checkbox</type>
</CustomField>