Partial_14Dec2021/force-app/main/default/objects/Promotion_Members__c/fields/Promotion_Status__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Status__c</fullName>
    <label>Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Reachable</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>