Partial_14Dec2021/force-app/main/default/objects/Promotion_Members__c/fields/Promotions__c.field-meta.xml
<CustomField>
    <fullName>Promotions__c</fullName>
    <label>Promotions</label>
    <referenceTo>Promotions__c</referenceTo>
    <relationshipName>Promotion_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>