Partial_14Dec2021/force-app/main/default/objects/Promotion_Members__c/fields/Purchase_potential__c.field-meta.xml
<CustomField>
    <fullName>Purchase_potential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Purchase potential</label>
    <type>Checkbox</type>
</CustomField>