Partial_14Dec2021/force-app/main/default/objects/Promotion_Members__c/fields/Suggestion__c.field-meta.xml
<CustomField>
    <fullName>Suggestion__c</fullName>
    <label>Suggestion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Product</fullName>
            </value>
            <value>
                <fullName>Branding</fullName>
            </value>
            <value>
                <fullName>Solution Material</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>