Partial_14Dec2021/force-app/main/default/objects/Promotion_Members__c/fields/Type_of_contact__c.field-meta.xml
<CustomField>
    <fullName>Type_of_contact__c</fullName>
    <formula>TEXT(Contacts__r.Type__c)</formula>
    <label>Type of contact</label>
    <type>Text</type>
</CustomField>