Partial_14Dec2021/force-app/main/default/objects/Promotion_Members__c/fields/Will_you_recommend__c.field-meta.xml
<CustomField>
    <fullName>Will_you_recommend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Would  you Consider Purchasing from us</label>
    <type>Checkbox</type>
</CustomField>